Add comments to explain in part 08

--- a/Lesson-3/08_Menu-Template-Solution/menu.html
+++ b/Lesson-3/08_Menu-Template-Solution/menu.html
@@ -2,10 +2,10 @@
 <html>
 
 <body>
-
+<!-- the printed code -->
 <h1>{{restaurant.name}}</h1>
 
-
+<!-- the begining of logical code -->
 {% for i in items %}
 
 <div>
@@ -18,7 +18,7 @@
 
 </div>
 
-
+<!-- the ending of logical code -->
 {% endfor %}
 </body>
 
