--- a/Lesson-3/10_url_for-Solution/menu.html
+++ b/Lesson-3/10_url_for-Solution/menu.html
@@ -17,6 +17,7 @@
 <p> {{i.price}} </p>
 
 <a href='{{url_for('editMenuItem', restaurant_id = restaurant.id, menu_id = i.id) }}'>Edit</a>
+<!-- used {{..}} scince it's a fun in Python and I want the output **printed** on to my HTML doc -->
 
 </br>
 <a href = '{{url_for('deleteMenuItem', restaurant_id = restaurant.id, menu_id = i.id ) }}'>Delete</a>
